# aws-route53-batch-proxy

./: .gitignore  Containerfile  Dockerfile  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
ansible/: deploy.yml  test-dns.yml
ansible/tasks/: apply-manifests.yml  pull-secret.yml  wait-for-builds.yml
ansible/templates/: manifests.yaml.j2
ansible/vars/: dev.yml.example
docs/: agnosticd-integration-destroy.md  agnosticd-integration-provision.md  agnosticd-integration.md
docs/superpowers/plans/: 2026-03-11-route53-batch-proxy.md
docs/superpowers/specs/: 2026-03-11-route53-batch-proxy-design.md
playbooks/: deploy.yaml
playbooks/templates/: manifests.yaml.j2
playbooks/vars/: common.yml  dev.yml.example  prod.yml.example
src/: app.py  batcher.py  config.py  flusher.py  metrics.py  proxy.py  route53_client.py  route53_xml.py  server.py
tests/: conftest.py  test_batcher.py  test_flusher.py  test_proxy.py  test_route53_xml.py
