[project]
name = "aws-route53-batch-proxy"
version = "0.1.0"
description = "Route53 batch proxy — queues and deduplicates DNS changes"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
